# Locksmith

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
locksmith/api/: app.py  auth.py  schemas.py
locksmith/api/routes/: activate.py  admin.py  validate.py
locksmith/cli/: generate.py  request.py  setup.py  verify.py
locksmith/core/: config.py  keys.py  license.py  machine.py  signer.py  store.py
tests/: commands.txt  conftest.py  test_api.py  test_keys.py  test_license.py  test_machine.py  test_signer.py
