[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locksmith"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "rsa>=4.9",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "click>=8.1.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
locksmith-setup   = "locksmith.cli.setup:main"
locksmith-issue   = "locksmith.cli.generate:main"
locksmith-verify  = "locksmith.cli.verify:main"
locksmith-request = "locksmith.cli.request:main"
locksmith-serve   = "locksmith.api.app:serve"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["locksmith"]
omit = ["tests/*"]
